--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,13 +58,20 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  # example:  
+  fonts:
+    - family: first
+      fonts:
+        - asset: assets/fonts/MUHAMMADI QURANIC FONT.ttf
+    - family: nizar
+      fonts:
+        - asset: assets/fonts/NizarCoconKurdishLight.ttf
+    - family: nabi
+      fonts:
+        - asset: assets/fonts/Nabi.ttf
+    - family: calibri
+      fonts:
+        - asset: assets/fonts/Calibri Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
