--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  get_storage: ^2.1.1
   intl: ^0.18.1
   provider: ^6.0.5
 
